--- a/css/style.css
+++ b/css/style.css
@@ -1079,11 +1079,26 @@ input[name=vitals]{
     text-align: center;
 }
 
-input[type=checkbox]{
-    margin: 30px 0px 0px 58px;
+.consent{
+    margin: 20px 0px 0px 58px;
 }
 
 .personalInfo,.categoryInfo,.addressInfo,.medicalInfo{
     margin-left: 40px;
     margin-right: 40px;
+}
+
+#comorbidityList{
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 20px;
+    display: none;
+    padding: 20px;
+    border: 2px solid;
+    border-radius: 3px;
+}
+
+.listOfComorbidity{
+    margin-left: 50px;
+    margin-right: 50px;
 }
