--- a/css/style.css
+++ b/css/style.css
@@ -1075,22 +1075,22 @@ input[name=vitals]{
 
 #otherTextField{
     display: none;
-    margin-top: 10px;
+    margin-left: -70%;
 }
 
 #comorbidityList{
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-top: 20px;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-top: 4%;
     display: none;
-    padding: 20px;
+    padding: 15px;
     border: 2px solid;
     border-radius: 3px;
 }
 
 .listOfComorbidity{
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
 }
 
 .required:after{
