--- a/css/style.css
+++ b/css/style.css
@@ -241,10 +241,8 @@ a.article:hover {
 }
 
 .buttonTop3{
-    display: block;
     float: right;
-    margin-right: 10px;
-    right: 0px;
+    margin-right: 5px;
 }
 
 .buttontop4{
@@ -278,16 +276,21 @@ a.article:hover {
 
 .genButton{
     float: right;
-    margin: .5%;
-    margin-top: 2%;
+    margin-right: .5%;
 }
+
+
+#generateReportOptions{
+    height: fit-content;
+}
+
 
 #DlRepNote{
     float: right;
     margin-bottom: 1%;
 }
 
-.buttonContainer{
+.topContainer{
     position: relative;
     width: 100%;
     display: inline-block;
@@ -340,6 +343,10 @@ a.article:hover {
     margin-bottom: 1%;
 }
 
+.searchDept{
+    width: 35%;
+}
+
 .buttonTransparent{
     background: transparent!important;
     border: transparent!important;
@@ -362,22 +369,24 @@ a.article:hover {
     width: 5% !important;
 }
 
+.searchReport{
+    width: ;
+}
 .editButton{
     float: right;
 }
 
 input[type=text]{
-    margin-top: 8px;
     font-size: 17px;
-    border: whitesmoke;
-    background: whitesmoke;
-    width: 94%;
     height: auto;
+    display: inline-block;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    max-height: fit-content;
+    text-align: center;
 }
 
-#searchDep{
-    width: 30%;
-}
+
 
 #searchPatientEIR, #searchPatientBrgy{
     width: 80%;
@@ -403,7 +412,7 @@ hr {
 }
 
 #searchReportHSO, #searchVaccineHSO{
-    width: 70%;
+    width: 65%;
 }
 
 #searchpatientHSO{
@@ -419,12 +428,13 @@ input[type=textDesc]{
     height: 40px;
 }
 
+
 .addNewVaccineH3 {
     color: black;
 }
 
-.search-dep input[type=text] {
-    width: 30% !important;
+.searchDept input[type=text] {
+    width: 100% !important;
 }
 
 /* Modal Content/Box */
@@ -806,7 +816,7 @@ input[type=text]:disabled{
 
 .row2{
     max-height: fit-content;
-    min-height: 65%;
+    min-height: 100%;
     margin:2%;
 }
 
@@ -957,8 +967,63 @@ h7~h8{
     float: left;
 }
 
-.filterButton, .sortButton{
-    padding: 1%;
+
+
+select {
+    /* styling */
+    background-color: white;
+    border: thin solid #000000;
+    border-radius: 4px;
+    display: inline-block;
+    font: inherit;
+    line-height: 1.5em;
+    padding: 0.5em 3.5em 0.5em 1em;
+
+    /* reset */
+
+    margin: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+
+/* arrows */
+
+select.sortButton, select.filterButton {
+    background-image:
+            linear-gradient(45deg, transparent 50%, #f3f3f3 50%),
+            linear-gradient(135deg, #f6f6f6 50%, transparent 50%),
+            linear-gradient(to right, #007bfe, #007bfe);
+    background-position:
+            calc(100% - 20px) calc(1em + 2px),
+            calc(100% - 15px) calc(1em + 2px),
+            100% 0;
+    background-size:
+            5px 5px,
+            5px 5px,
+            2.5em 2.5em;
+    background-repeat: no-repeat;
+}
+
+select.sortButton:focus, select.filterButton:focus {
+    background-image:
+            linear-gradient(45deg, white 50%, transparent 50%),
+            linear-gradient(135deg, transparent 50%, white 50%),
+            linear-gradient(to right, gray, gray);
+    background-position:
+            calc(100% - 15px) 1em,
+            calc(100% - 20px) 1em,
+            100% 0;
+    background-size:
+            5px 5px,
+            5px 5px,
+            2.5em 2.5em;
+    background-repeat: no-repeat;
+    border-color: grey;
+    outline: 0;
 }
 
 .sortButton{
@@ -1144,7 +1209,8 @@ input[name=vitals]{
     border: solid gray 2px;
     border-radius: 5px;
     width: 25%;
-    height: auto;
+    max-height: fit-content;
+    min-height: 100%;
     margin-left: 2%;
     padding: 1%;
     margin-top: 2%;
