--- a/css/style.css
+++ b/css/style.css
@@ -167,9 +167,12 @@ a.article:hover {
     border: none;
     background: whitesmoke;
     padding: 1%;
-    margin-right: 7%;
 }
 
+.btnTop3{
+    position: relative;
+    float: right;
+}
 .timeBox {
     margin-bottom: -9%;
     margin-top: -6%;
@@ -180,9 +183,7 @@ a.article:hover {
     margin-bottom: -8%;
     font-size: 195%!important;
 }
-.btnBell {
-    margin-left: -85%;
-}
+
 
 .upperBox {
     display: block !important;
@@ -242,7 +243,8 @@ a.article:hover {
 
 .buttonTop3{
     float: right;
-    margin-right: 5px;
+    margin: 2px;
+    width: auto;
 }
 
 .buttontop4{
@@ -291,9 +293,8 @@ a.article:hover {
 }
 
 .topContainer{
-    position: relative;
+    display: grid;
     width: 100%;
-    display: inline-block;
 }
 
 
@@ -344,7 +345,9 @@ a.article:hover {
 }
 
 .searchDept{
-    width: 35%;
+    position: relative;
+    float: left;
+    width: 100%;
 }
 
 .buttonTransparent{
@@ -369,9 +372,7 @@ a.article:hover {
     width: 5% !important;
 }
 
-.searchReport{
-    width: ;
-}
+
 .editButton{
     float: right;
 }
@@ -383,7 +384,6 @@ input[type=text]{
     border: 2px solid #ccc;
     border-radius: 8px;
     max-height: fit-content;
-    text-align: center;
 }
 
 
@@ -407,16 +407,20 @@ hr {
     margin-bottom: 5%;
 }
 
-#searchVaccine,#searchPatient,#searchPersonnel,#searchReport{
+#searchVaccine,#searchPatient,#searchPersonnel{
     width: 60%;
 }
 
-#searchReportHSO, #searchVaccineHSO{
+#searchReportHSO{
+    width: 100%;
+}
+
+#searchVaccineHSO{
     width: 65%;
 }
 
 #searchpatientHSO{
-    width: 60%;
+    width: 100%;
 }
 
 input[type=textDesc]{
@@ -815,8 +819,7 @@ input[type=text]:disabled{
 }
 
 .row2{
-    max-height: fit-content;
-    min-height: 100%;
+    height: fit-content;
     margin:2%;
 }
 
@@ -837,7 +840,7 @@ input[type=text]:disabled{
     margin-top: 10%;
 }
 .tableVax{
-    margin-top: 2%;
+    margin-top: 10%;
 }
 
 .tableBrgy {
@@ -1210,7 +1213,7 @@ input[name=vitals]{
     border-radius: 5px;
     width: 25%;
     max-height: fit-content;
-    min-height: 100%;
+    min-height: 550px;
     margin-left: 2%;
     padding: 1%;
     margin-top: 2%;
