--- a/css/style.css
+++ b/css/style.css
@@ -1265,3 +1265,39 @@ input[name=vitals]{
     content: " *";
     color: red;
 }
+
+/*Scan QR*/
+#passportInt {
+    width: 40%;
+
+    background-color: transparent;
+    margin-left:31%;
+}
+
+#passportId{
+    border-bottom: solid black 1px;
+    width: 90%;
+}
+
+#scannerTxt {
+    text-align: center;
+}
+
+#inputTxt{
+    text-align: center;
+    margin-top: 3%;
+}
+
+#preview {
+    border-radius: 12px;
+    width: 50%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+input[id='passportId']::placeholder
+    {
+        text-align: center;      /* for Chrome, Firefox, Opera */
+    }
