--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,6 @@ a.article:hover {
 
 .genButton{
     float: right;
-    margin-right: .5%;
 }
 
 
@@ -672,6 +671,16 @@ input[type=date]{
     /* 15% from the top and centered */
     border: 1px solid #888;
     width: fit-content;
+    /*Could be more or less, depending on screen size */
+    border-radius: 12px;
+}
+
+.content-modal-table1{
+    background-color: #fefefe;
+    margin: 5% auto;
+    /* 15% from the top and centered */
+    border: 1px solid #888;
+    width: 70%;
     /*Could be more or less, depending on screen size */
     border-radius: 12px;
 }
