--- a/css/style.css
+++ b/css/style.css
@@ -242,9 +242,15 @@ a.article:hover {
 }
 
 .buttonTop3{
-    float: left;
+    float: right;
     margin: 5px;
-    width: auto;
+    background-color: #1D7195;
+    border: none;
+    color: white;
+    padding: 8px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 10px;
 }
 
 .buttontop4{
@@ -278,7 +284,6 @@ a.article:hover {
 
 .genButton{
     float: right;
-    margin-right: .5%;
 }
 
 
@@ -350,6 +355,8 @@ a.article:hover {
     width: 100%;
 }
 
+
+
 .buttonTransparent{
     background: transparent!important;
     border: transparent!important;
@@ -392,7 +399,7 @@ input[type=text]{
 }
 
 #searchPatientVaxPer{
-    width: 100%;
+    width: 95%;
 }
 
 hr {
@@ -542,7 +549,7 @@ input[type=text1] {
 .counter-box p {
     margin: 5px 0 0;
     padding: 0;
-    color: #909090;
+    color: #ffffff;
     font-size: 18px;
     font-weight: 500
 }
@@ -557,24 +564,53 @@ input[type=text1] {
     display: block;
     font-size: 32px;
     font-weight: 700;
-    color: #666;
+    color: #ffffff;
     line-height: 28px
 }
 
-.counter-box.colored {
-    background: #3acf87
+.counter-box.colored1 {
+    background: #68A0B8
 }
 
-.counter-box.colored p,
-.counter-box.colored i,
-.counter-box.colored .counter {
+.counter-box.colored1 p,
+.counter-box.colored1 i,
+.counter-box.colored1 .counter {
+    color: #fff
+}
+
+.counter-box.colored2 {
+    background: #4F91AD
+}
+
+.counter-box.colored2 p,
+.counter-box.colored2 i,
+.counter-box.colored2 .counter {
+    color: #fff
+}
+.counter-box.colored3 {
+    background: #3681A1
+}
+
+.counter-box.colored3 p,
+.counter-box.colored3 i,
+.counter-box.colored3 .counter {
+    color: #fff
+}
+
+.counter-box.colored4 {
+    background: #1D7195
+}
+
+.counter-box.colored4 p,
+.counter-box.colored4 i,
+.counter-box.colored4 .counter {
     color: #fff
 }
 
 
 
 .tableReport {
-    width: 80%!important;
+    width: 100%!important;
     background-color: white;
     border-radius: 12px;
     margin-top: 1%;
@@ -585,7 +621,6 @@ input[type=text1] {
     border-radius: 12px;
     margin-top: 1%;
 }
-
 
 .depSum h5{
     padding: 2%;
@@ -685,6 +720,16 @@ input[type=date]{
     border-radius: 12px;
 }
 
+.content-modal-table1{
+    background-color: #fefefe;
+    margin: 5% auto;
+    /* 15% from the top and centered */
+    border: 1px solid #888;
+    width: 70%;
+    /*Could be more or less, depending on screen size */
+    border-radius: 12px;
+}
+
 img{
     display: block;
     margin-left: auto;
@@ -694,7 +739,8 @@ img{
 
 .counterColumn{
     float: right;
-    width: 20%;
+    width: 100%;
+
 }
 
 .counterRow {
@@ -832,7 +878,7 @@ input[type=text]:disabled{
 }
 
 .tableDep{
-    width: 73%!important;
+    width: 100%!important;
     height: 60%;
     margin: 1%;
     background-color: white;
@@ -849,9 +895,7 @@ input[type=text]:disabled{
     height: 60%;
     margin-top: 10%;
 }
-.tableVax{
-    margin-top: 10%;
-}
+
 
 h7~h8{
     margin-left: 4%;
@@ -967,6 +1011,8 @@ h7~h8{
 }
 
 
+
+
 .sfDiv select {
     /* styling */
     background-color: white;
@@ -976,6 +1022,7 @@ h7~h8{
     font: inherit;
     line-height: 1.5em;
     padding: 0.3em 3.5em 0.3em 1em;
+
     /* reset */
 
     margin: 0;
@@ -987,11 +1034,12 @@ h7~h8{
 }
 
 
+
 select.sortButton, select.filterButton {
     background-image:
             linear-gradient(45deg, transparent 50%, #f3f3f3 50%),
             linear-gradient(135deg, #f6f6f6 50%, transparent 50%),
-            linear-gradient(to right, #007bfe, #007bfe);
+            linear-gradient(to right, #1D7195, #1D7195);
     background-position:
             calc(100% - 20px) calc(1em + 2px),
             calc(100% - 15px) calc(1em + 2px),
@@ -1026,9 +1074,8 @@ select.sortButton:focus, select.filterButton:focus {
 }
 
 .sortButton, .filterButton{
-    width: 100%;
+    width: 95%;
 }
-
 
  h5~select {
      border: 1px solid;
@@ -1201,12 +1248,14 @@ input[name=vitals]{
 }
 
 #deploymentSummary{
-    width: 25%;
-     max-height: fit-content;
-     min-height: 500px;
-     padding: 1%;
-     margin-top: 1%;
-     background-color: white;
+    margin-top: 12%;
+    background-color: #f6f6f6;
+    padding: 2%;
+    width: 100%;
+    border-radius: 12px;
+    display: inline-block;
+    margin-left: 7%;
+    margin-right: 7%;
 }
 
 .marker{
@@ -1236,17 +1285,22 @@ input[name=vitals]{
 }
 
 .depSummary {
-    border: solid gray 2px;
-    border-radius: 5px;
-    width: 25%;
+    float: right;
+    border-radius: 10px;
+    width: 100%;
     max-height: fit-content;
-    min-height: 100%;
-    margin-left: 2%;
-    padding: 1%;
-    margin-top: 2%;
+    min-height: 50%;
+    padding: 3%;
+    margin-top: 1%;
+    background-color: #68A0B8;
+    color: white;
 }
 .bold{
     font-weight: 800!important;
+}
+
+.listPatient-box h3{
+    color: white;
 }
 
 #counter{
@@ -1280,7 +1334,7 @@ input[name=vitals]{
 #barangayHomeContent{
     margin-left: -2%;
     margin-right: 5%;
-} 
+}
 
 /*Monitoring*/
 .search-containerMonitoring{
