--- a/css/EIRModule.css
+++ b/css/EIRModule.css
@@ -1,4 +1,5 @@
 .labelRow{
+    font-size: 15px;
     text-align: center;
 }
 
@@ -41,8 +42,8 @@
     margin-bottom: 2%;
 }
 
-.topPart{
-    padding: 1%;
+.table-title{
+    margin-bottom: 2%;
 }
 
 #patientTable{
@@ -85,4 +86,8 @@
 .navbar{
     margin-top: 2%;
     margin-bottom: 2%;
+}
+
+.center {
+    text-align: center;
 }
