--- a/css/style.css
+++ b/css/style.css
@@ -1271,7 +1271,7 @@ input[name=vitals]{
 }
 
 /*HSO*/
-.tablePatient,.tableVaccine,{
+.tablePatient,.tableVaccine {
     width: 100%!important;
     background-color: white;
 }
